issue logo overlap

--- a/website/src/components/LogoGrid/LogoGrid.module.css
+++ b/website/src/components/LogoGrid/LogoGrid.module.css
@@ -43,6 +43,10 @@
 	.images {
 		justify-content: space-between;
 	}
+	.featureSvg {
+		height: 100px;
+		width: 100px;
+	}
 }
 
 @media screen and (max-width: 700px) {
@@ -51,6 +55,8 @@
 		margin: 0;
 	}
 	.featureSvg {
-		display: none;
+		height: 100px;
+		width: 100px;
+		margin-top: 5px;
 	}
 }
